created model of expenses

--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Theodore Frazier",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^14.2.0",
     "expree": "^0.1.6",
     "express": "^4.17.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheodoreBFrazier/budget_app_express.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/TheodoreBFrazier/budget_app_express/issues"
+  },
+  "homepage": "https://github.com/TheodoreBFrazier/budget_app_express#readme",
+  "description": ""
 }
